--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name":     "Piotr Śliwa",
-            "homepage": "http://ohey.pl",
-            "email":    "peter.pl7@gmail.com"
+            "name":     "AP Potter via Piotr Śliwa",
+            "homepage": "http://chuamuangphan.com",
+            "email":    "iamhottest2pm@gmail.com"
         }     
     ],
     "require": {
